tests/format/misc/errors/js/import-assertions/invalid-flow-typeof-import-1.mjs
import typeof module foo from "./module.wasm";
